Corrected header spacing -- restructured HTML divs & CSS; shortened links

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 #top-left {
-	position: absolute;
+	position: relative;
 	margin: 7px 0 0 10px;
 }
 
@@ -41,8 +41,31 @@
 
 .GI {
 	/*padding-right: 15px;*/
+	flex: 0 1 auto;
 	display: flex;
 	line-height: normal;
+
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+	white-space: nowrap;
+}
+
+.gmail {
+	padding-left: 0;
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+	flex: 0 0 auto;
+}
+
+.images {
+	display: inline-block;
+	/*padding-left: 15px;*/
+	vertical-align: middle;
+
+	margin-left: 0 !important;
+	margin-right: 0 !important;
 }
 
 .icon {
@@ -62,18 +85,31 @@
 	white-space: nowrap;
 }
 
-.apps {
+.products {
+	padding-left: 0;
+
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+
 	display: inline-block;
 	flex: 0 0 auto;
-	outline: none;
 
 	padding: 0 0 0 15px;
 	vertical-align: middle;
 
-	position: relative;
 	line-height: normal;
 	text-align: left;
 	white-space: nowrap;
+}
+
+.apps {
+	position: relative;
+}
+
+.aboutp {
+	color: #000;
+	cursor: pointer;
+	text-decoration: none;
 
 	background-position: -132px -38px;
 	opacity: .55;
@@ -81,13 +117,19 @@
 	background-image: url('https://ssl.gstatic.com/gb/images/i1_1967ca6a.png');
 	background-size: 528px 68px;
 
+	display: inline-block;
+	outline: none;
+	vertical-align: middle;
+
+	-moz-border-radius: 2px;
 	border-radius: 2px;
+	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	height: 30px;
 	width: 30px;
 }
 
-#signin {
+.box {
 	display: inline-block;
 	padding: 0 0 0 15px;
 	position: relative;
@@ -96,6 +138,14 @@
 	margin-left: 0 !important;
 	margin-right: 0 !important;
 
+	flex: 0 0 auto;
+}
+
+.blue{
+	position: relative;
+}
+
+#signin {
 	color: #fff;
 	cursor: default;
 	text-decoration: none;	
